--- a/assets/scss/pages/_dashboard.scss
+++ b/assets/scss/pages/_dashboard.scss
@@ -1,1 +1,33 @@
 @import "../utils/reset";
+
+.app__dashboard {
+  background-color: #f2f2f2;
+  height: 100vh;
+  width: 100%;
+  &__header {
+    padding-top: 10px;
+    text-align: center;
+    padding: 10px;
+    font-size: 32px;
+    font-weight: bold;
+    padding-top: 20px;
+  }
+  &__content {
+    margin-top: 50px;
+    &__item {
+      background-color: grey;
+      color: white;
+      i {
+        font-size: 24px;
+        margin-right: 20px;
+        color: #fbce00;
+      }
+      box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+      text-decoration: none;
+      display: block;
+      padding: 20px;
+      margin-right: 20px;
+      border-radius: 10px;
+    }
+  }
+}
