feat:task2 ready

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -330,3 +330,176 @@ table {
     margin: 50px auto;
     height: 50px;
     background-color: #f6a5e9; }
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline; }
+
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block; }
+
+body {
+  line-height: 1; }
+
+ol,
+ul {
+  list-style: none; }
+
+blockquote,
+q {
+  quotes: none; }
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none; }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
+.task-2 {
+  margin-top: 20px !important;
+  width: 80%;
+  margin: 0 auto; }
+  .task-2__header {
+    width: 100%; }
+    .task-2__header--top {
+      background-color: #c3c3c3;
+      padding: 50px;
+      text-align: center; }
+      .task-2__header--top__title {
+        margin-bottom: 30px; }
+        .task-2__header--top__title__item {
+          font-weight: bold;
+          font-size: 50px; }
+      .task-2__header--top__desc {
+        font-weight: bold;
+        margin-bottom: 30px;
+        font-size: 32px; }
+    .task-2__header--bottom__navigation__links {
+      display: flex;
+      justify-content: space-around; }
+      .task-2__header--bottom__navigation__links li {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        height: 50px;
+        width: 100%; }
+  .task-2__main__project {
+    margin-bottom: 30px;
+    border: 1px solid lightgrey;
+    padding: 20px; }
+    .task-2__main__project__title--main--title {
+      font-size: 24px;
+      font-weight: bold;
+      margin-bottom: 20px; }
+    .task-2__main__project__title--sub--title {
+      font-size: 18px;
+      font-weight: bold;
+      margin-bottom: 20px; }
+    .task-2__main__project__features {
+      margin-left: 40px;
+      margin-top: 10px; }
+      .task-2__main__project__features__list {
+        list-style: disc; }
+        .task-2__main__project__features__list li {
+          margin-bottom: 5px; }
