--- a/assets/scss/utils/_colors.scss
+++ b/assets/scss/utils/_colors.scss
@@ -4,4 +4,6 @@ $dashboard--icon--color: #fcbe00;
 $dashboard--item--box--shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 
 // Task-1 Colors
-$task-1--bg--color: #f1f1f1;
+$task-1--header--bg--color: black;
+$task-1--box--shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+$task-1--footer--bg--color: #f6a5e9;
