--- a/assets/scss/pages/_task1.scss
+++ b/assets/scss/pages/_task1.scss
@@ -6,7 +6,7 @@
   &__header {
     width: 100%;
     height: 50px;
-    background-color: black;
+    background-color: $task-1--header--bg--color;
   }
   &__content {
     margin-top: 50px;
@@ -15,15 +15,15 @@
       height: 250px;
       background-color: lightgrey;
       margin-bottom: 20px;
-      box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+      box-shadow: $task-1--box--shadow;
       border-radius: 10px;
     }
   }
-  &__footer{
+  &__footer {
     width: 80%;
     border-radius: 10px;
     margin: 50px auto;
     height: 50px;
-    background-color: #f6a5e9;
+    background-color: $task-1--footer--bg--color;
   }
 }
