--- a/assets/scss/utils/_grid.scss
+++ b/assets/scss/utils/_grid.scss
@@ -7,7 +7,6 @@
 .row {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
 }
 .col-12 {
   width: 100%;
@@ -18,19 +17,17 @@
   width: 50%;
   align-items: center;
   justify-content: center;
-  text-align: center;
 }
 .col-3 {
   width: 23%;
   align-items: center;
+  margin-right: 20px;
   justify-content: center;
-  text-align: center;
 }
 .col-4 {
   width: 33.3%;
   align-items: center;
   justify-content: center;
-  text-align: center;
 }
 html {
   scroll-behavior: smooth;
